# Spider-Keylogger

./: .gitignore  CMakeLists.txt  DoxygenLayout.xml  README.md
cert/: cert.pem  key.pem
client/inc/: AutoStart.hpp  ClientLogger.hpp
client/src/: AutoStart.cpp  ClientLogger.cpp  main.cpp
cmake/Modules/: CMakeDependentOption.cmake  CMakeDoxyfile.in  CMakeLists.txt  CMakeVariableDump.cmake  CPackConfigDEB.cmake  CPackConfigRPM.cmake  CheckApplyCXXCompilerFlags.cmake  CheckInitMethod.cmake  CurrentDate.cmake  DefineProjectVersion.cmake  DemangleCppABI.cmake  EnableCoverageReport.cmake  EnableCppExtras.cmake  ExtractSpreadVersion.cpp.in  ExtractTBBVersion.cpp.in  FindBoostThreadpool.cmake  FindBoostUUID.cmake  FindCccc.cmake  FindENet.cmake  FindFRI.cmake  FindJsonCpp.cmake  FindLog4cxx.cmake  FindMongo.cmake  FindOpenKC.cmake  FindProtocolBuffers.cmake  FindQGLViewer.cmake  FindSCC.cmake  FindSpread.cmake  FindSqlite3.cmake  FindTBB.cmake  FindValgrind.cmake  FindXenomai.cmake  GenerateCccc.cmake  GenerateDoxygen.cmake  GenerateValgrind.cmake  GitProjectVersion.cmake  IgnoreReturnCode.cmake  InstallDebugSymbols.cmake  PadString.cmake  PedanticCompilerWarnings.cmake  (+7 more)
common/inc/: AFactory.hpp  ALog.hpp  APacket.hpp  ASocket.hpp  BoostCircularBuffer.hpp  BoostConnectSocket.hpp  BoostFileSystemHelper.hpp  BoostListenSocket.hpp  BoostOpenSsl.hpp  BoostOpenSslConnectSocket.hpp  BoostOpenSslListenSocket.hpp  BoostOpenSslSocket.hpp  BoostProgramOptions.hpp  BoostSignal.hpp  BoostSocket.hpp  BoostSslCtx.hpp  BoostSslCtxClient.hpp  BoostSslCtxServer.hpp  ClientNetwork.hpp  DataBaseLog.hpp  DataBaseParser.hpp  Dispatcher.hpp  FileLog.hpp  HandShakeResult.hpp  HandshakeResult.hpp  IAcceptSocket.hpp  ICircularBuffer.hpp  IConnectSocket.hpp  IFileSystemHelper.hpp  IListenSocket.hpp  IOpenSsl.hpp  IProgramOptions.hpp  IReadable.hpp  ISignal.hpp  ISocket.hpp  ISslCtx.hpp  JSONParser.hpp  KeyStroke.hpp  KillConfirm.hpp  KillRequest.hpp  (+8 more)
common/src/: ALog.cpp  APacket.cpp  ASocket.cpp  BoostCircularBuffer.cpp  BoostConnectSocket.cpp  BoostFileSystemHelper.cpp  BoostListenSocket.cpp  BoostOpenSsl.cpp  BoostOpenSslConnectSocket.cpp  BoostOpenSslListenSocket.cpp  BoostOpenSslSocket.cpp  BoostProgramOptions.cpp  BoostSignal.cpp  BoostSocket.cpp  BoostSslCtx.cpp  BoostSslCtxClient.cpp  BoostSslCtxServer.cpp  ClientNetwork.cpp  DataBaseLog.cpp  DataBaseParser.cpp  Dispatcher.cpp  FileLog.cpp  HandshakeResult.cpp  JSONParser.cpp  KeyStroke.cpp  KillConfirm.cpp  KillRequest.cpp  MouseClick.cpp  PacketException.cpp  Request.cpp  Result.cpp  ScreenShot.cpp  ScreenShotRequest.cpp  SocketFactory.cpp  printv.cpp
keylogger/inc/: ClientNetwork.hpp  Dispatcher.hpp  Keylogger.hpp  Network.hpp
keylogger/src/: ClientNetwork.cpp  Dispatcher.cpp  Keylogger.cpp  dllmain.cpp
server/inc/: DataBaseLog.hpp  Network.hpp  Server.hpp  Spider.hpp
server/src/: DataBaseLog.cpp  Network.cpp  Server.cpp  Spider.cpp  main.cpp
